=head1 NAME

Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf

(As of $Date$ $Revision$)

=head2 Changes in Devel::NYTProf 2.09 (svn rXXX)

  Fixed report filename generation to remove colons,
    for Windows, reported by Adam Kennedy in rt bug #43798.
  Fixed report filename generation to remove dots, for VMS.
  Fixed savesrc which wasn't safe and reliable.
  Added missing t/test22-strevala.t to MANIFEST.
  Extended testing to exercise compress and savesrc options.

Ported to VMS, thanks to Peter (Stig) Edwards:

  Renamed t/\d\d.test.t    files to t/\d\d_test.t 
          t/test*.pm.x     files to t/test*.pm_x 
          t/test*fork.\d.* files to t/test*fork-\d.*
          .js and .css     file to only have one period/dot
    for greater portability.  VMS ODS-2 files can only have
    one period/dot.
  Added t/92-file_port.t as a developer-only and
    request-using-ENV test, to help maintain portable files,
    currently .indent.pro and .perltidyrc fall foul of portable
    filename characters as defined by ANSI C and perlport.
  NYTProf.xs's open_output_file use mode 'wb' and not 'wbx'
    to avoid unsupported error when on VMS.

=head2 Changes in Devel::NYTProf 2.08 (svn r685) 15th Feb 2009

Core:

  Added optimize=0 option to disable the perl optimizer
    so you can see more accurate statement execution counts
    for some kinds of constructs.

  Added savesrc=1 option to copy source code into the profile
    so reports are not affected by changes to the source files.

  Added ability for DB::enable_profile() to specify a new file
    for profile data to be written to.

Reporting:

  Time spent within nested string evals is accounted for.

  Fixed searching @INC for source files for reports.

  Dramatically increased performance of nytprofhtml
    relative to the 2.07 version.

  Many tables in html reports are sortable by clicking on header columns
    (requires JavaScript, uses jQuery and tablesorter.js)
